[1] cartesian product added [2] Builder design change for extensibility [3] Test case optimization [4] Input type changes from Collection to List